Fix small alignment issues on search page

--- a/sass/includes/search/_search-buckets.scss
+++ b/sass/includes/search/_search-buckets.scss
@@ -11,14 +11,15 @@
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 0;
-        padding-left: 2rem;
-        padding-right: 2rem;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
         order: -1;
         &-item {
             display: inline-block;
             list-style: none;
             width: 18%;
-            margin-right: 1rem;
+            margin-right: 0.5rem;
+            margin-left: 0.5rem;
             min-height: 100px;
             margin-bottom: 1rem;
             font-family: $font__supria-sans;
