--- a/sass/includes/search/_search-sort-view.scss
+++ b/sass/includes/search/_search-sort-view.scss
@@ -1,6 +1,7 @@
 .search-sort-view {
     $root: &;
     display: flex;
+    align-items: flex-start;
 
     @media only screen and (max-width: $screen__md) {
         margin-left: 1rem;
